# adventofcode

./: .gitignore  Cargo.toml
aoc2021_1/: Cargo.toml
aoc2021_1/src/: lib.rs
aoc2021_2/: Cargo.toml
aoc2021_2/src/: lib.rs
aoc2021_3/: Cargo.toml
aoc2021_3/src/: lib.rs
aoc2021_4/: Cargo.toml
aoc2021_4/src/: lib.rs
aoc2021_4_box/: Cargo.toml
aoc2021_4_box/src/: lib.rs  realdata.txt
aoc2021_5/: Cargo.toml
aoc2021_5/src/: lib.rs
aoc2021_6/: Cargo.toml
aoc2021_6/src/: lib.rs
aoc2021_6a/: Cargo.toml
aoc2021_6a/src/: lib.rs
aoc2021_7/: Cargo.toml
aoc2021_7/src/: lib.rs
lrucache/src/: lib.rs
manhattan/: Cargo.toml
manhattan/src/: lib.rs
resistors/: Cargo.toml
resistors/src/: lib.rs
role_playing/: Cargo.toml
role_playing/src/: lib.rs
scratchpad/: Cargo.toml
scratchpad/src/: lib.rs
scratchpad_test_copy_struct/: Cargo.toml
scratchpad_test_struct_boxed/: Cargo.toml
scratchpad_test_struct_boxed/src/: lib.rs
scratchpad_test_struct_boxed1/: Cargo.toml
scratchpad_test_struct_boxed1/src/: lib.rs
scratchpad_test_struct_byref/: Cargo.toml
scratchpad_test_struct_byref/src/: lib.rs
scratchpad_vector_of_complex_structs/: Cargo.toml
scratchpad_vector_of_complex_structs/src/: lib.rs
scratchpad_vector_of_medium_structs/: Cargo.toml
scratchpad_vector_of_medium_structs/src/: lib.rs
scratchpad_vector_of_simple_structs/: Cargo.toml
scratchpad_vector_of_simple_structs/src/: lib.rs
string_reverse/: Cargo.toml
string_reverse/src/: lib.rs
timestuff/: Cargo.toml
timestuff/src/: lib.rs
